--- a/index.html
+++ b/index.html
@@ -126,19 +126,15 @@ a {
       <!-- Image and name container. Change to your picture here. -->
       <div class="" style="text-align: center">
         <img src="https://www.w3schools.com/howto/img_link_tree_template3_bio.jpg" class="w3-round" alt="person image" width="250px" height="200px" style="border-radius: 50%; border: 5px solid #4ab6e0 !important; margin-top: 16px;">
-        <p class="name"><br><span class="w3-padding w3-theme-l1 w3-margin w3-round" style="font-weight: bolder; font-size: x-large; border: 3px solid #1b7a9f;">Szia. Próba Peti vagyok!</span></p><br>
-        <p><span class="profession w3-padding w3-theme-d5 w3-round" style="font-weight: bolder; border: 3px solid #d0ecf7;">Hegymászó vagyok!</span></p><br>
+        <p class="name"><br><span class="w3-padding w3-theme-l1 w3-margin w3-round" style="font-weight: bolder; font-size: x-large; border: 3px solid #1b7a9f;">Szia. Péter Rebeka vagyok!</span></p><br>
+        <p><span class="profession w3-padding w3-theme-d5 w3-round" style="font-weight: bolder; border: 3px solid #d0ecf7;">Hegymászó!</span></p><br>
       </div>
 
       <!-- Links section 1. Replace the # inside of the "" with your links. -->
       <div class="links-container">
-        <a href="#" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">MY CLIMBS</a>
+        <a href="#" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Rólam</a>
         <br>
-        <a href="#" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">EXPEDITIONS</a>
-        <br>
-        <a href="#" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">MY WORKOUT</a>
-        <br>
-        <a href="#" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">MY BLOG</a><br>
+        <a href="#" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Expedícióim</a>
         <br>
         <p><span class="subscribe w3-padding w3-theme-d5 w3-round" style="font-weight: bolder; border: 3px solid #d0ecf7;">Subscribe to my news!</span></p>
         <div class="submit" style="width: 80%;">
