--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-light-blue.css">
-<link rel="stylesheet" href="myclimbs\index.html">
 <title>Links website</title>
 <script src="https://unpkg.com/feather-icons"></script>
 
@@ -132,7 +131,7 @@ a {
 
       <!-- Links section 1. Replace the # inside of the "" with your links. -->
       <div class="links-container">
-        <a href="#" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Rólam</a>
+        <a href="myclimbs/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Rólam</a>
         <br>
         <a href="#" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Expedícióim</a>
         <br>
