--- a/myclimbs/index.html
+++ b/myclimbs/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>My climbs</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rólam</title>
+  <style>
+    body {
+      background-color: rgb(116, 185, 116);
+      color: white;
+    }
+  </style>
 </head>
 <body>
-  <h1> Rólam </h1>
-  
+  <div id="fejlec">
+    <h1>Rólam</h1>
+  </div>
 </body>
 </html>
