--- a/web/troli.html
+++ b/web/troli.html
@@ -2,11 +2,11 @@
 <html lang="hu">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="troli.css">
-  <link rel="stylesheet" href="troli.js">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="troli.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -40,11 +40,11 @@
         <a class="nav-link" href="#felepites">Felépítés</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#felsovezetes">Felsővezetés</a>
+        <a class="nav-link" href="#jaratviszonylatok">Budapesti viszonylatok</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#budapestiviszonylatok">Budapesti Viszonylatok</a>
-      </li>
+        <a class="nav-link" href="#felsovezetes">Felsővezetés</a>
+      </li>     
     </ul>
   </div>
 </nav>
@@ -87,7 +87,7 @@
   <div class="row">
     <div class="col-lg-12">
 	  <h1 class="display-2">Trolibusz</h1>
-      <p id="def">A trolibusz olyan közúti tömegközlekedési elektromos hajtású, gumikerekes jármű, amelyet áramszedők kapcsolnak a felsővezetékhez, amiből a mozgáshoz szükséges energiát kapja. Funkciója általában a közforgalmú autóbuszéhoz hasonló. A trolibusz közúti jármű; a <a href="http://net.jogtar.hu/kresz" target="_blank">KRESZ</a> definíciója szerint „elektromos felsővezetékhez kötött gépkocsi”.</p>     
+      <p id="def">A trolibusz olyan közúti tömegközlekedési elektromos hajtású, gumikerekes jármű, amelyet áramszedők kapcsolnak a felsővezetékhez, amiből a mozgáshoz szükséges energiát kapja. Funkciója általában a közforgalmú autóbuszéhoz hasonló. A trolibusz közúti jármű; a <a href="http://net.jogtar.hu/kresz" target="_blank">KRESZ</a>  definíciója szerint „elektromos felsővezetékhez kötött gépkocsi”.</p>     
     </div>
   </div>
   <div class="row">
@@ -99,9 +99,9 @@
       <h2 class="display-4">Hajtásrendszer</h2>
       <p>A dízelmotorok csak korlátozott fordulatszám-tartományban képesek működni, és álló helyzetben leállnak. Ezért szükséges az autóbuszokon sebességváltót alkalmazni. A mechanikus váltókat, a vezető kímélése végett a 20. század harmadik harmada óta elektromágneses váltóval helyettesítik. Nem villamos hajtású járművek elindulásakor még a korszerű automatikus sebességváltók mellett is rángatózások jelentkeznek, mert váltás közben pillanatszerűen megszűnik a tengelyekre ható forgatónyomaték. A trolibuszokon mindez teljesen kiküszöbölhető: a korszerű elektromos hajtásoknál megoldható a teljesen sima indulás. Emellett alacsony fordulatszámnál is nagy vonóerő érhető el, így a trolibuszok ideálisak hegyi utakon.</p>
     </div>
-   </div>
-   <div class="row">
-    <div class="col-lg-12" id="felepites">
+  </div>
+  <div class="row">
+    <div class="col-lg-8" id="felepites">
       <h2 class="display-4">Felépítés</h2> 
       <p>1980-ban gyártásba került csehszlovák Škoda 14Tr trolibusz rajza, vastag betűvel kiemelve a trolibusz-specifikus elemek.</p>
       <ul>
@@ -124,7 +124,7 @@
       </ul>
       <img src="jarmu.png" class="img-thumbnail" alt="Trolibusz felépítése" title="Trolibusz felépítése"/>      
      </div>
-     <div class="col-lg-8" id="magyarazat">
+    <div class="col-lg-4" id="magyarazat">
       <ol>
         <li>Felsővezeték</li>
         <li>Viszonylatjelző tábla</li>
@@ -143,8 +143,10 @@
         <li>Elektromos berendezés a tetőn</li>
         <li>Pályaszám</li>
       </ol>
+      
     </div>
-    <div class="row">
+  </div>
+  <div class="row">
     <div class="col-lg-6" id="felsovezetes">
       <h2 class="display-4">Felsővezetés</h2>        
       <p>Míg a villamosnál az áramforrás (betáp) második pólusa maga a sín, addig a trolibusznál a jármű földelése nem megoldott. Ez az oka annak, hogy a trolibusznak kettős felsővezetékre van szüksége. A legelterjedtebb vontatási feszültség a világon a 600 V-os egyenáram. Jellegzetesen háromféle felsővezeték-rendszert használnak a világon: a merev rendszerűt, a súlyfeszítéses rendszerűt és a rugalmas felfüggesztésű Kummler & Matter rendszerűt. Ez utóbbit használják Magyarországon leggyakrabban, a rugalmas kialakítás ugyanis nagyobb haladási sebességet tesz lehetővé, mert csökken az áramszedő kiugrásának veszélye.</p>
@@ -181,4 +183,3 @@
 
 </body>
 </html>
-
