--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ a {
       <div class="links-container">
         <a href="zengohegy/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Zengő hegy</a>
         <br>
-        <a href="honfoglaló/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Honfoglaló</a>
+        <a href="honfoglalo/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Honfoglaló</a>
         <br>
         <a href="web/troli.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Troli</a>
         <br>
