--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ a {
         <br>
         <a href="balatongyörök/balatongyorok.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Balatongyörök kilátói</a>
         <br>
+        <a href="kutyak/magyarkutyak.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Kutyák</a>
         <p><span class="subscribe w3-padding w3-theme-d5 w3-round" style="font-weight: bolder; border: 3px solid #d0ecf7;">Subscribe to my news!</span></p>
         <div class="submit" style="width: 80%;">
           <form>
